# Xfit

Xfit/: README  Xfit.sln
Xfit/CertainWarriorAndroid/: build.gradle  gradle.properties  local.properties  settings.gradle
Xfit/CertainWarriorAndroid/app/: build.gradle
Xfit/CertainWarriorAndroid/app/src/main/cpp/: CMakeLists.txt
Xfit/DirectX 9/: DirectX 9.vcxproj  main.cpp
Xfit/Freetype/: Freetype.vcxproj  Freetype.vcxproj.filters
Xfit/FreetypeAndroid/: FreetypeAndroid.vcxproj  FreetypeAndroid.vcxproj.filters
Xfit/Libjpeg/: Libjpeg.vcxproj  Libjpeg.vcxproj.filters  cdjpeg.c  jconfig.h  jdcolor.c  jpeglib.h  rdjpgcom.c  wrjpgcom.c
Xfit/LibjpegAndroid/: LibjpegAndroid.vcxproj  LibjpegAndroid.vcxproj.filters
Xfit/Libogg/: Libogg.vcxproj  Libogg.vcxproj.filters  README  info.c  os.h  res0.c  sharedbook.c  tone.c
Xfit/Libogg/ogg/: config_types.h
Xfit/LiboggAndroid/: LiboggAndroid.vcxproj  LiboggAndroid.vcxproj.filters
Xfit/Libpng/: Libpng.vcxproj  Libpng.vcxproj.filters  pngpriv.h  pngstruct.h
Xfit/LibpngAndroid/: LibpngAndroid.vcxproj  LibpngAndroid.vcxproj.filters
Xfit/MakeLocalTable/: MakeLocalTable.vcxproj  main.cpp  main.h
Xfit/MakeWebP/: MakeWebP.vcxproj  main.cpp
Xfit/Test/: FadeLabelButton.h  LabelButton.cpp  LabelImage.cpp  LabelImage.h  List.h  Map.h  Option.cpp  Option.h  SizeLabel.h  Test.vcxproj  Test.vcxproj.filters  Title.cpp  Title.h  VisualTextBox.cpp  korean.localTable  main.cpp  main.h
Xfit/WordCombination/: EditBox.cpp  EditBox.h  FadeLabelButton.cpp  LabelButton.h  LabelImage.cpp  LabelImage.h  LabelListButton.h  LabelToggleButton.cpp  List.h  Option.cpp  Place.h  PlaceEvent.h  SizeLabel.cpp  Slider.cpp  Slider.h  Title.cpp  VisualTextBox.cpp  VisualTextBox.h  WordCombination.vcxproj  WordCombination.vcxproj.filters  main.cpp  main.h
Xfit/Xfit/: Xfit.vcxproj  Xfit.vcxproj.filters  XfitPropertySheetDebug.props  XfitPropertySheetRelease.props  imgInsPx2D.hlsl  imgInsVert2D.hlsl  imgMultiInsPx2D.hlsl  imgMultiInsVert2D.hlsl  imgPx2D.hlsl  imgVert2D.hlsl  lineGeo2D.hlsl  lineInsGeo2D.hlsl  lineInsVert2D.hlsl  linePx2D.hlsl  shapeGeo2D.hlsl  shapeInsGeo2D.hlsl  shapeInsVert2D.hlsl  shapePx2D.hlsl  shapeVert2D.hlsl  stdafx.h
Xfit/Xfit/_GL/: glext.h  khrplatform.h
Xfit/Xfit/_shader/: imgInsVert.glsl  imgVert.glsl
Xfit/Xfit/_system/: _Android.cpp  _Android.h  _DXGI.cpp  _DXGI.h  _DirectX11.cpp  _DirectX11.h  _GraphicsBase.h  _Loop.cpp  _Loop.h  _OpenGL.cpp  _OpenGL.h  _Renderer.h  _Vulkan.cpp  _Vulkan.h  _Windows.cpp  _Windows.h  _XfitDataFiles.h
Xfit/Xfit/component/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  EditBox.cpp  EditBox.h  FadeLabelButton.cpp  FadeLabelButton.h  LabelButton.cpp  LabelButton.h  LabelListButton.cpp  LabelListButton.h  LabelOptionButton.cpp  LabelOptionButton.h  LabelToggleButton.cpp  LabelToggleButton.h  RadioButton.cpp  RadioButton.h  Scrollbar.cpp  Scrollbar.h  SizeButton.cpp  SizeButton.h  Slider.cpp  Slider.h  ToggleButton.cpp  ToggleButton.h
Xfit/Xfit/data/: Array.h  Compress.cpp  Compress.h  Converter.cpp  Converter.h  ImageType.h  ImageUtil.cpp  ImageUtil.h  Memory.h  PriorityQueue.h  Sort.h
Xfit/Xfit/decoder/: Decoder.cpp  Decoder.h  ImageDecoder.cpp  ImageDecoder.h  JPEGDecoder.cpp  JPEGDecoder.h  OGGDecoder.cpp  OGGDecoder.h  PNGDecoder.cpp  PNGDecoder.h  SoundDecoder.cpp  SoundDecoder.h  WAVDecoder.cpp  WAVDecoder.h  WebPAnimateDecoder.cpp  WebPAnimateDecoder.h  WebPDecoder.cpp  WebPDecoder.h
Xfit/Xfit/effect/: Blend.cpp  Blend.h  Effect.h  Filter.cpp  Filter.h  Light.h
Xfit/Xfit/encoder/: Encoder.cpp  Encoder.h  ImageEncoder.cpp  ImageEncoder.h  WebPAnimateLosslessEncoder.cpp  WebPAnimateLosslessEncoder.h  WebPLosslessEncoder.cpp  WebPLosslessEncoder.h
Xfit/Xfit/file/: AssetFile.h  File.h  INI.cpp  INI.h  Register.h  ResourceManager.cpp  ResourceManager.h
Xfit/Xfit/math/: Collision.cpp  Collision.h  Hexagon.cpp  Hexagon.h  Lines.cpp  Lines.h  Math.h  Matrix.cpp  Matrix.h  Point.h  Point3D.h  Point3Dw.h  Random.cpp  Random.h  Rect.h  mt19937.txt
Xfit/Xfit/network/: IP.cpp  IP.h  Socket.cpp  Socket.h
Xfit/Xfit/object/: AnimateLoopObject.cpp  AnimateLoopObject.h  AnimateMultiInstance.cpp  AnimateMultiInstance.h  AnimateObject.cpp  AnimateObject.h  Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Image.cpp  Image.h  ImageBase.cpp  ImageBase.h  ImageInstance.cpp  ImageInstance.h  ImageMultiInstance.cpp  ImageMultiInstance.h  LabelImage.cpp  LabelImage.h  Line.cpp  Line.h  LineInstance.cpp  LineInstance.h  MatrixObject.cpp  MatrixObject.h  Object.cpp  Object.h  RTAnimateObject.cpp  RTAnimateObject.h  RTAnimateObjectBase.cpp  RTAnimateObjectBase.h  RadioButton.cpp  RadioButton.h  ScaleHeader.cpp  ScaleHeader.h  ScaleImage.cpp  ScaleImage.h  Shape.cpp  Shape.h  (+6 more)
Xfit/Xfit/object3D/: Image3D.cpp  Image3D.h  Object3D.cpp  Object3D.h  Shape3D.cpp  Shape3D.h
Xfit/Xfit/physics/: Collision.cpp  Collision.h  HitTest.h  RectCollision.cpp  RectCollision.h  RectHitTest.cpp  RectHitTest.h  SizeRectHitTest.cpp  SizeRectHitTest.h
Xfit/Xfit/resource/: AnimateBase.cpp  AnimateBase.h  AnimateFrame.cpp  AnimateFrame.h  CenterPointPos.h  Frame.cpp  Frame.h  FrameArray.cpp  FrameArray.h  FrameCompressFormat.h  FrameFormat.h  Index.cpp  Index.h  MultiInstanceNode.h  RTAnimateFrame.cpp  RTAnimateFrame.h  Sampler.cpp  Sampler.h  ShapeVertex.cpp  ShapeVertex.h  Vertex.cpp  Vertex.h
Xfit/Xfit/sound/: Sound.cpp  Sound.h
Xfit/Xfit/system/: Context.cpp  Context.h  Error.h  Event.h  Input.cpp  Input.h  Screen.cpp  Screen.h  System.cpp  System.h  WriteFlag.h
Xfit/Xfit/text/: Font.cpp  Font.h  Label.cpp  Label.h  SizeLabel.cpp  (+9 more)
Xfit/XfitAndroid/: XfitAndroid.vcxproj  XfitAndroid.vcxproj.filters
Xfit/XfitTest/: XfitTest.vcxproj  main.cpp
Xfit/XfitUWP/: XfitUWP.cpp  XfitUWP.vcxproj  XfitUWP.vcxproj.filters
Xfit/Zlib/: Zlib.vcxproj  Zlib.vcxproj.filters  gzlib.c  gzread.c  gzwrite.c  inflate.c
Xfit/ZlibAndroid/: ZlibAndroid.vcxproj  ZlibAndroid.vcxproj.filters
Xfit/shaders/: imgFrag.glsl  imgInsVert.glsl  imgMultiInsFrag.glsl  imgMultiInsVert.glsl  imgVert.glsl  shapeFrag.glsl  shapeVert.glsl
(+28 files in other folders)
